Update: Enhancing the code

--- a/index.html
+++ b/index.html
@@ -1,13 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tiago Lauer</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Portfolio of Tiago Lauer, a web developer specializing in Vue.js, Nuxt.js, and modern front-end technologies." />
+    <meta name="keywords" content="Tiago Lauer, Web Developer, Vue.js, Nuxt.js, JavaScript, Front-end Developer, Portfolio" />
+    <meta name="author" content="Tiago Lauer" />
+
+    <!-- Open Graph Meta Tags (for social sharing) -->
+    <meta property="og:title" content="Tiago Lauer - Web Developer" />
+    <meta property="og:description" content="Explore the portfolio of Tiago Lauer, showcasing web development projects using Vue.js, Nuxt.js, and more." />
+    <meta property="og:image" content="/images/og-image.jpg" />
+    <meta property="og:url" content="https://www.tiagolauer.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tiago Lauer - Web Developer" />
+    <meta name="twitter:description" content="Explore the portfolio of Tiago Lauer, a web developer specializing in front-end technologies." />
+    <meta name="twitter:image" content="/images/og-image.jpg" />
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <title>Tiago Lauer - Web Developer Portfolio</title>
   </head>
+  
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+
+    <!-- Load the main JS asynchronously to improve performance -->
+    <script type="module" src="/src/main.js" defer></script>
   </body>
 </html>
